--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -590,3 +590,53 @@ doi = {10.1007/978-3-642-29178-4_45}
 	title        = {[Feature request] Add wasm support},
 	howpublished = {\url{https://github.com/grpc/grpc-go/issues/2294}}
 }
+
+
+@article{dynamo_paper,
+ author = {DeCandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
+ title = {Dynamo: Amazon's Highly Available Key-value Store},
+ journal = {SIGOPS Oper. Syst. Rev.},
+ issue_date = {December 2007},
+ volume = {41},
+ number = {6},
+ month = oct,
+ year = {2007},
+ issn = {0163-5980},
+ pages = {205--220},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/1323293.1294281},
+ doi = {10.1145/1323293.1294281},
+ acmid = {1294281},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {performance, reliability, scalability},
+} 
+
+@misc{dynamo_web,
+	title        = {Amazon DynamoDB},
+	howpublished = {\url{https://aws.amazon.com/dynamodb/}}
+}
+
+@INPROCEEDINGS{SWIM,
+author={A. {Das} and I. {Gupta} and A. {Motivala}},
+booktitle={Proceedings International Conference on Dependable Systems and Networks},
+title={SWIM: scalable weakly-consistent infection-style process group membership protocol},
+year={2002},
+volume={},
+number={},
+pages={303-312},
+keywords={protocols;workstation clusters;wide area networks;computer network reliability;SWIM;scalable weakly-consistent infection-style protocol;process group membership protocol;distributed peer-to-peer applications;generic software module;heart-beating protocol;response times;network loads;performance;PC cluster;failure detection;membership update;periodic randomized probing protocol;piggybacking;ping messages;deterministic time bound;experimental results;WAN;Protocols;Peer to peer computing;Application software;Large-scale systems;Delay;Frequency;Computer crashes;Personal communication networks;Condition monitoring;Robustness},
+doi={10.1109/DSN.2002.1028914},
+ISSN={},
+month={June},}
+
+@misc{memberlist,
+	title        = {Memberlist},
+	howpublished = {\url{https://github.com/hashicorp/memberlist}}
+}
+
+@inproceedings{epidemics,
+  title={The Mathematical Theory of Infectious Diseases and Its Applications},
+  author={Alexander Grey},
+  year={1977}
+}
