--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -118,10 +118,11 @@
 	%   5. Instalación de la aplicación de manera automática
 	\input{secciones/06_implementacion}
 
-	% Presupuesto
+	% Resultados
+	%\input{secciones/07_results}
 
 	% Conclusiones y Trabajos futuros
-	\input{secciones/07_conclusiones}
+	%\input{secciones/08_conclusiones}
 
 	
 	\newpage
