--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -640,3 +640,13 @@ month={June},}
   author={Alexander Grey},
   year={1977}
 }
+
+@misc{prometheus,
+	title        = {Prometheus},
+	howpublished = {\url{https://prometheus.io/}}
+}
+
+@misc{prom-image,
+	title        = {Prometheus Overview},
+	howpublished = {\url{https://prometheus.io/docs/introduction/overview/}}
+}
